--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*",
-		"nicmart/tree": "~0.2"
+		"laravel/framework": "5.0.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
