--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
 		],
 		"psr-4": {
 			"App\\": "app/"
-		}
+		},
+		"files": [
+			"app/Chess/square.php"
+		]
 	},
 	"autoload-dev": {
 		"classmap": [
