--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "~5.0",
-		"prettus/l5-repository": "^2.1"
+		"prettus/l5-repository": "^2.1",
+		"league/fractal": "^0.13.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~5.0",
