--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~5.0",
-		"phpdocumentor/phpdocumentor": "~2.0"
+		"phpdocumentor/phpdocumentor": "~2.0",
+		"fzaninotto/faker": "~1.4"
 	},
 	"autoload": {
 		"classmap": [
