--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
 	"require-dev": {
 		"phpunit/phpunit": "~5.0",
 		"phpdocumentor/phpdocumentor": "~2.0",
-		"fzaninotto/faker": "~1.4"
+		"fzaninotto/faker": "~1.4",
+		"symfony/dom-crawler": "~3.0",
+		"symfony/css-selector": "~3.0"
 	},
 	"autoload": {
 		"classmap": [
