--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
+    "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.10.0",
     "typescript": "^1.7.3"
