Make app url more flexible
You may need to update your .env!

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
+BASE_URL=http://localhost
+
 DB_HOST=localhost
 DB_DATABASE=webchess
 DB_USERNAME=webchess
