--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "web-chess",
   "version": "0.0.0",
   "license": "MIT",
-  "dependencies": {
-  },
+  "dependencies": {},
   "scripts": {
-      "jspm": "jspm",
-      "gulp": "gulp"
+    "jspm": "jspm",
+    "gulp": "gulp",
+    "bower": "bower"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
+    "bower": "^1.7.7",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
