--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "web-chess",
   "version": "0.0.0",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "typings": "^1.0.4"
+  },
   "scripts": {
     "jspm": "jspm",
     "gulp": "gulp",
-    "bower": "bower"
+    "bower": "bower",
+    "typings": "typings"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
@@ -15,33 +18,47 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.2",
     "gulp-changed": "^1.3.0",
-    "gulp-sass": "^2.1.1",
+    "gulp-sass": "^2.3.1",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.10.0",
+    "gulp-typescript": "^2.13.5",
     "jspm": "^0.16.25",
-    "typescript": "^1.7.3",
-    "angular2": "2.0.0-beta.3",
-    "es6-promise": "3.0.2",
-    "es6-shim": "0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.0",
-    "zone.js": "0.5.11"
+    "typescript": "^1.8.10",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
+    "core-js": "^2.4.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "^0.6.12"
   },
   "jspm": {
     "directories": {
       "baseURL": "public"
     },
     "dependencies": {
-      "angular2": "npm:angular2@2.0.0-beta.3",
+      "@angular/common": "npm:@angular/common@2.0.0-rc.1",
+      "@angular/compiler": "npm:@angular/compiler@2.0.0-rc.1",
+      "@angular/core": "npm:@angular/core@2.0.0-rc.1",
+      "@angular/http": "npm:@angular/http@2.0.0-rc.1",
+      "@angular/platform-browser": "npm:@angular/platform-browser@2.0.0-rc.1",
+      "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@2.0.0-rc.1",
+      "@angular/router": "npm:@angular/router@2.0.0-rc.1",
+      "@angular/upgrade": "npm:@angular/upgrade@2.0.0-rc.1",
       "chessground": "github:ornicar/chessground@^3.5.0",
-      "es6-shim": "github:es-shims/es6-shim@0.33.3",
+      "core-js": "npm:core-js@^1.1.4",
       "merge": "github:jupiter24/js.merge@master",
       "mithril": "github:ornicar/mithril.js@^1.0.0",
       "ornicar/chessground": "github:ornicar/chessground@^3.5.0",
       "ornicar/mithril.js": "github:ornicar/mithril.js@^1.0.0",
-      "reflect-metadata": "npm:reflect-metadata@0.1.2",
-      "rxjs": "npm:rxjs@5.0.0-beta.0",
-      "zone.js": "npm:zone.js@0.5.11"
+      "reflect-metadata": "npm:reflect-metadata@0.1.3",
+      "rxjs": "npm:rxjs@5.0.0-beta.6",
+      "zone.js": "npm:zone.js@^0.6.12"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
