--- a/package.json
+++ b/package.json
@@ -12,17 +12,6 @@
     "typings": "typings"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "bower": "^1.7.7",
-    "del": "^2.2.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-changed": "^1.3.0",
-    "gulp-sass": "^2.3.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.5",
-    "jspm": "^0.16.25",
-    "typescript": "^1.8.10",
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
     "@angular/core": "2.0.0-rc.1",
@@ -32,9 +21,19 @@
     "@angular/router": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
     "@angular/upgrade": "2.0.0-rc.1",
+    "bower": "^1.7.7",
+    "chess-es6.js": "github:jupiter24/chess-es6.js#v0.1.2",
     "core-js": "^2.4.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-changed": "^1.3.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.13.5",
+    "jspm": "^0.16.25",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
+    "typescript": "^1.8.10",
     "zone.js": "^0.6.12"
   },
   "jspm": {
@@ -50,6 +49,7 @@
       "@angular/platform-browser-dynamic": "npm:@angular/platform-browser-dynamic@2.0.0-rc.1",
       "@angular/router": "npm:@angular/router@2.0.0-rc.1",
       "@angular/upgrade": "npm:@angular/upgrade@2.0.0-rc.1",
+      "chess-es6.js": "github:jupiter24/chess-es6.js@^0.1.2",
       "chessground": "github:ornicar/chessground@^3.5.0",
       "core-js": "npm:core-js@^1.1.4",
       "merge": "github:jupiter24/js.merge@master",
